[DATALAB-2090]: Fixed sticky footer on audit/billing on safari (#942)
[DATALAB-2090]: Fixed sticky footer on audit/billing on safari

--- a/services/self-service/src/main/resources/webapp/src/app/reports/audit/audit-grid/audit-grid.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/reports/audit/audit-grid/audit-grid.component.scss
@@ -18,6 +18,7 @@
  */
 
 .audit-table-wrapper {
+  position: relative;
   width: 100%;
   max-height: calc(100vh - 130px);
   max-height: -moz-calc(100vh - 130px);
@@ -309,6 +310,7 @@
 
 .table-footer {
   position: sticky;
+  position: -webkit-sticky;
   bottom: -1px;
   background: inherit;
   border-top: 1px solid #E0E0E0;
